unpackaged/main/default/objects/Account/fields/Level_2_Supervisor_s_ID__c.field-meta.xml
<CustomField>
    <fullName>Level_2_Supervisor_s_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Level 2 Supervisor&#39;s ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>