unpackaged/main/default/objects/Account/fields/Lifetime_Bounces__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Bounces__c</fullName>
    <description>Lifetime bounces to date</description>
    <label>Lifetime Bounces</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>