unpackaged/main/default/objects/Account/fields/Lifetime_Clicks__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Clicks__c</fullName>
    <description>Lifetime clicks to date</description>
    <label>Lifetime Clicks</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>