unpackaged/main/default/objects/Account/fields/Lifetime_Open_Rate__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Open_Rate__c</fullName>
    <formula>Lifetime_Opens__c /  Lifetime_Sends__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lifetime Open Rate</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>