unpackaged/main/default/objects/Account/fields/Lifetime_Opens__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Opens__c</fullName>
    <description>Lifetime clicks to date</description>
    <label>Lifetime Opens</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>