unpackaged/main/default/objects/Account/fields/Lifetime_Sends__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Sends__c</fullName>
    <description>Number of liftetime sends</description>
    <label>Lifetime Sends</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>