unpackaged/main/default/objects/Account/fields/Living_Status__c.field-meta.xml
<CustomField>
    <fullName>Living_Status__c</fullName>
    <description>Deceased indicator</description>
    <inlineHelpText>Deceased indicator</inlineHelpText>
    <label>Patient Living Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>*Unspecified</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>