unpackaged/main/default/objects/Account/fields/Low_Back_Pain_Dx__c.field-meta.xml
<CustomField>
    <fullName>Low_Back_Pain_Dx__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox set to yes (checked) if specified diagnoses are in the patient&#39;s diagnosis list and present within the last year</description>
    <inlineHelpText>Automatically set to yes (checked) if specified diagnoses are in the patient&#39;s diagnosis list and present within the last year</inlineHelpText>
    <label>Low Back Pain Dx</label>
    <type>Checkbox</type>
</CustomField>