unpackaged/main/default/objects/Account/fields/LPH_Service_Area__c.field-meta.xml
<CustomField>
    <fullName>LPH_Service_Area__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LPH Service Area</label>
    <length>80</length>
    <type>Text</type>
</CustomField>