unpackaged/main/default/objects/Account/fields/Mastectomy_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Mastectomy_Procedure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox set to yes (checked) if specified diagnoses are in the patient&#39;s diagnosis list</description>
    <inlineHelpText>Automatically set to yes (checked) if specified diagnoses are in the patient&#39;s diagnosis list</inlineHelpText>
    <label>Mastectomy Procedure</label>
    <type>Checkbox</type>
</CustomField>