unpackaged/main/default/objects/Account/fields/match_prefix__c.field-meta.xml
<CustomField>
    <fullName>match_prefix__c</fullName>
    <description>matching prefix created from email and birthdate</description>
    <formula>PersonEmail &amp; &#39;_&#39; &amp; TEXT(PersonBirthdate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>match prefix</label>
    <type>Text</type>
</CustomField>