unpackaged/main/default/objects/Account/fields/Metro_Denver_Service_Area__c.field-meta.xml
<CustomField>
    <fullName>Metro_Denver_Service_Area__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Metro Denver Service Area</label>
    <length>80</length>
    <type>Text</type>
</CustomField>