unpackaged/main/default/objects/Account/fields/MHC_Activation_Status__c.field-meta.xml
<CustomField>
    <fullName>MHC_Activation_Status__c</fullName>
    <description>My Health Connection (Epic MyChart Patient Portal) activation status</description>
    <inlineHelpText>My Health Connection (Epic MyChart Patient Portal) activation status</inlineHelpText>
    <label>MHC Activation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>