unpackaged/main/default/objects/Account/fields/MHC_Can_Log_In__c.field-meta.xml
<CustomField>
    <fullName>MHC_Can_Log_In__c</fullName>
    <description>MHC app user login information</description>
    <inlineHelpText>MHC app user login information</inlineHelpText>
    <label>MHC Can Log In?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>