unpackaged/main/default/objects/Account/fields/MHC_eCheck_in_Volume__c.field-meta.xml
<CustomField>
    <fullName>MHC_eCheck_in_Volume__c</fullName>
    <description>Number of eCheck-In activities in My Health Connection (Epic MyChart Patient Portal) in the past 12 months (rolling)</description>
    <inlineHelpText>Number of eCheck-In activities in My Health Connection (Epic MyChart Patient Portal) in the past 12 months (rolling)</inlineHelpText>
    <label>MHC eCheck-in Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>