unpackaged/main/default/objects/Account/fields/MHC_Last_Login__c.field-meta.xml
<CustomField>
    <fullName>MHC_Last_Login__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MHC Last Login</label>
    <type>DateTime</type>
</CustomField>