unpackaged/main/default/objects/Account/fields/MHC_Login_Count_Mobile_App__c.field-meta.xml
<CustomField>
    <fullName>MHC_Login_Count_Mobile_App__c</fullName>
    <description>Number of times the patients has logged in to My Health Connection (MyChart Patient Portal) via the mobile application in the past 12 months (rolling)</description>
    <inlineHelpText>Number of times the patients has logged in to My Health Connection (MyChart Patient Portal) via the mobile application in the past 12 months (rolling)</inlineHelpText>
    <label>MHC Login Count - Mobile App</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>