unpackaged/main/default/objects/Account/fields/MHC_Login_Count_Web__c.field-meta.xml
<CustomField>
    <fullName>MHC_Login_Count_Web__c</fullName>
    <description>Number of times the patients has logged in to My Health Connection (MyChart Patient Portal) via the web in the past 12 months (rolling)</description>
    <inlineHelpText>Number of times the patients has logged in to My Health Connection (MyChart Patient Portal) via the web in the past 12 months (rolling)</inlineHelpText>
    <label>MHC Login Count - Web</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>