unpackaged/main/default/objects/Account/fields/MHC_Messsage_Volume__c.field-meta.xml
<CustomField>
    <fullName>MHC_Messsage_Volume__c</fullName>
    <label>MHC Messsage Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>