unpackaged/main/default/objects/Account/fields/MHC_Pharmacy_Refill_Volume__c.field-meta.xml
<CustomField>
    <fullName>MHC_Pharmacy_Refill_Volume__c</fullName>
    <description>Number of medication activities in My Health Connection (Epic MyChart Patient Portal) in the past 12 months (rolling)</description>
    <inlineHelpText>Number of medication activities in My Health Connection (Epic MyChart Patient Portal) in the past 12 months (rolling)</inlineHelpText>
    <label>MHC Pharmacy Refill Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>