unpackaged/main/default/objects/Account/fields/MHC_Portal_Account_Key__c.field-meta.xml
<CustomField>
    <fullName>MHC_Portal_Account_Key__c</fullName>
    <description>MHC app table key</description>
    <encryptionScheme>None</encryptionScheme>
    <label>MHC Portal Account Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>