unpackaged/main/default/objects/Account/fields/Most_Recent_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Most recent specialist provider this patient has seen.</description>
    <inlineHelpText>Most recent specialist this patient has seen.</inlineHelpText>
    <label>Most Recent Specialist</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Most Recent Specialist)</relationshipLabel>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>