unpackaged/main/default/objects/Account/fields/MOU_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>MOU_Signed_Date__c</fullName>
    <description>Date on which this business account signed a memorandum of understanding with the health system that allows referring patients.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date on which this business account signed a memorandum of understanding with the health system that allows referring patients.</inlineHelpText>
    <label>MOU Signed Date</label>
    <type>Date</type>
</CustomField>