unpackaged/main/default/objects/Account/fields/MRN_Created__c.field-meta.xml
<CustomField>
    <fullName>MRN_Created__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MRN Created Date</label>
    <type>Date</type>
</CustomField>