unpackaged/main/default/objects/Account/fields/MyChart_Status__c.field-meta.xml
<CustomField>
    <fullName>MyChart_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MyChart Activation Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>