unpackaged/main/default/objects/Account/fields/Network_Status__c.field-meta.xml
<CustomField>
    <fullName>Network_Status__c</fullName>
    <inlineHelpText>Identify if the hospital or practice is considered in-network or out-of-network</inlineHelpText>
    <label>Network Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Network</fullName>
            </value>
            <value>
                <fullName>Out-of-Network</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>