unpackaged/main/default/objects/Account/fields/New_Clinic_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>New_Clinic_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox created for Allina demo - indicates demo patient is interested in receiving info about the new clinics in their area.</description>
    <label>New Clinic Opt-In</label>
    <type>Checkbox</type>
</CustomField>