unpackaged/main/default/objects/Account/fields/Next_Outreach__c.field-meta.xml
<CustomField>
    <fullName>Next_Outreach__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Outreach</label>
    <type>Date</type>
</CustomField>