unpackaged/main/default/objects/Account/fields/Northern_Colorado_Service_Area__c.field-meta.xml
<CustomField>
    <fullName>Northern_Colorado_Service_Area__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Northern Colorado Service Area</label>
    <length>80</length>
    <type>Text</type>
</CustomField>