unpackaged/main/default/objects/Account/fields/NPI__c.field-meta.xml
<CustomField>
    <fullName>NPI__c</fullName>
    <description>Provider&#39;s NPI</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Provider&#39;s NPI</inlineHelpText>
    <label>NPI</label>
    <length>55</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>