unpackaged/main/default/objects/Account/fields/Occ_Health__c.field-meta.xml
<CustomField>
    <fullName>Occ_Health__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Occ Health</label>
    <type>Checkbox</type>
</CustomField>