unpackaged/main/default/objects/Account/fields/Opens_in_the_Last_31_Days__c.field-meta.xml
<CustomField>
    <fullName>Opens_in_the_Last_31_Days__c</fullName>
    <description>Opens over the last 31 days</description>
    <label>Opens in the Last 31 Days</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>