unpackaged/main/default/objects/Account/fields/Operational_Group__c.field-meta.xml
<CustomField>
    <fullName>Operational_Group__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Operational Group</label>
    <length>80</length>
    <type>Text</type>
</CustomField>