unpackaged/main/default/objects/Account/fields/Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>field for web-to-lead form to ask if user wants to opt in to mailing</description>
    <label>Opt In</label>
    <type>Checkbox</type>
</CustomField>