unpackaged/main/default/objects/Account/fields/Original_Date_of_Hire__c.field-meta.xml
<CustomField>
    <fullName>Original_Date_of_Hire__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Original Date of Hire</label>
    <type>Date</type>
</CustomField>