unpackaged/main/default/objects/Account/fields/Parent_Location__c.field-meta.xml
<CustomField>
    <fullName>Parent_Location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Parent Location</label>
    <length>80</length>
    <type>Text</type>
</CustomField>