unpackaged/main/default/objects/Account/fields/Partnership_Details__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Details__c</fullName>
    <description>Details about the partnership between the health system and this organization.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Details about the partnership between the health system and this organization.</inlineHelpText>
    <label>Partnership Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>