unpackaged/main/default/objects/Account/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox indicates status as a patient. Check = Patient, unchecked = non-patient or unsure. Automatically checked if MRN field is populated</description>
    <inlineHelpText>Checkbox indicates status as a patient. Check = Patient, unchecked = non-patient or unsure</inlineHelpText>
    <label>Is Patient?</label>
    <type>Checkbox</type>
</CustomField>