unpackaged/main/default/objects/Account/fields/Patient_Care__c.field-meta.xml
<CustomField>
    <fullName>Patient_Care__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Care</label>
    <length>80</length>
    <type>Text</type>
</CustomField>