unpackaged/main/default/objects/Account/fields/Patient_Primary_Allowed_Amount_Epic__c.field-meta.xml
<CustomField>
    <fullName>Patient_Primary_Allowed_Amount_Epic__c</fullName>
    <inlineHelpText>Summary of primary allowed amount from past 2 years</inlineHelpText>
    <label>Patient - Primary Allowed Amount - Epic</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>