unpackaged/main/default/objects/Account/fields/Patient_Race__c.field-meta.xml
<CustomField>
    <fullName>Patient_Race__c</fullName>
    <label>Patient Race</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Black or African American</fullName>
            </value>
            <value>
                <fullName>American Indian or Alaska Native</fullName>
            </value>
            <value>
                <fullName>Asian</fullName>
            </value>
            <value>
                <fullName>Native Hawaiian or Other Pacific Islander</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>