unpackaged/main/default/objects/Account/fields/Patient_receives_Navigation_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Patient_receives_Navigation_Assistance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox indicates whether a team at the health system is currently offering special assistance in navigating between departments and sites.</description>
    <inlineHelpText>This checkbox indicates whether a team at the health system is currently offering special assistance in navigating between departments and sites.</inlineHelpText>
    <label>Patient receives Navigation Assistance</label>
    <type>Checkbox</type>
</CustomField>