unpackaged/main/default/objects/Account/fields/Patient_Total_Patient_owed_Epic__c.field-meta.xml
<CustomField>
    <fullName>Patient_Total_Patient_owed_Epic__c</fullName>
    <inlineHelpText>Summary of total patient owed amount from past 2 years</inlineHelpText>
    <label>Patient - Total Patient owed - Epic</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>