unpackaged/main/default/objects/Account/fields/Patient_Total_Revenue_Billed_Epic__c.field-meta.xml
<CustomField>
    <fullName>Patient_Total_Revenue_Billed_Epic__c</fullName>
    <label>Patient - Total Revenue/Billed - Epic</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>