unpackaged/main/default/objects/Account/fields/PCP__c.field-meta.xml
<CustomField>
    <fullName>PCP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Care Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (PCP Provider ID)</relationshipLabel>
    <relationshipName>PatientList</relationshipName>
    <type>Lookup</type>
</CustomField>