unpackaged/main/default/objects/Account/fields/PCP_Exists__c.field-meta.xml
<CustomField>
    <fullName>PCP_Exists__c</fullName>
    <label>PCP Exists</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>