unpackaged/main/default/objects/Account/fields/PCP_First_Name__c.field-meta.xml
<CustomField>
    <fullName>PCP_First_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PCP First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>