unpackaged/main/default/objects/Account/fields/PCP_Provider_ID__c.field-meta.xml
<CustomField>
    <fullName>PCP_Provider_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PCP SER ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>