unpackaged/main/default/objects/Account/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assigned persona</description>
    <label>Persona</label>
    <referenceTo>Persona__c</referenceTo>
    <relationshipLabel>Patients</relationshipLabel>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>