unpackaged/main/default/objects/Account/fields/Policy_Effective_End__c.field-meta.xml
<CustomField>
    <fullName>Policy_Effective_End__c</fullName>
    <description>Policy effective end date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Policy Effective End</label>
    <type>Date</type>
</CustomField>