unpackaged/main/default/objects/Account/fields/Policy_Effective_Start__c.field-meta.xml
<CustomField>
    <fullName>Policy_Effective_Start__c</fullName>
    <description>Policy effective date start</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Policy Effective Start</label>
    <type>Date</type>
</CustomField>