unpackaged/main/default/objects/Account/fields/Policy_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Effective Date End</label>
    <type>Date</type>
</CustomField>