unpackaged/main/default/objects/Account/fields/Policy_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Effective Date Start</label>
    <type>Date</type>
</CustomField>