unpackaged/main/default/objects/Account/fields/Position_Code__c.field-meta.xml
<CustomField>
    <fullName>Position_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Position Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>