unpackaged/main/default/objects/Account/fields/Position_Title__c.field-meta.xml
<CustomField>
    <fullName>Position_Title__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Position Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>