unpackaged/main/default/objects/Account/fields/PPRH_Service_Area__c.field-meta.xml
<CustomField>
    <fullName>PPRH_Service_Area__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PPRH Service Area</label>
    <length>80</length>
    <type>Text</type>
</CustomField>