unpackaged/main/default/objects/Account/fields/Practice_Name__c.field-meta.xml
<CustomField>
    <fullName>Practice_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Practice Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>