unpackaged/main/default/objects/Account/fields/Preferred_Clinic__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Clinic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Patient&#39;s preferred clinic location</description>
    <label>Preferred Clinic</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Departments, Practice</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Preferred Clinic)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>