unpackaged/main/default/objects/Account/fields/Primary_Coverage_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Coverage_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Coverage Type</label>
    <length>55</length>
    <type>Text</type>
</CustomField>