unpackaged/main/default/objects/Account/fields/Primary_Department__c.field-meta.xml
<CustomField>
    <fullName>Primary_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Department</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Facility</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Primary Department</relationshipLabel>
    <relationshipName>PrimaryDepartment</relationshipName>
    <type>Lookup</type>
</CustomField>