unpackaged/main/default/objects/Account/fields/Primary_Location__c.field-meta.xml
<CustomField>
    <fullName>Primary_Location__c</fullName>
    <description>Primary location of the provider</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Primary location of the provider</inlineHelpText>
    <label>Primary Location</label>
    <length>80</length>
    <type>Text</type>
</CustomField>