unpackaged/main/default/objects/Account/fields/Primary_Payor_Financial_Class__c.field-meta.xml
<CustomField>
    <fullName>Primary_Payor_Financial_Class__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Payor Financial Class</label>
    <length>55</length>
    <type>Text</type>
</CustomField>