unpackaged/main/default/objects/Account/fields/Primary_Payor_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Payor_Name__c</fullName>
    <description>Name of the primary payor for this patient</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Name of the primary payor for this patient</inlineHelpText>
    <label>Primary Payor Name</label>
    <length>254</length>
    <type>Text</type>
</CustomField>