unpackaged/main/default/objects/Account/fields/Primary_Practice__c.field-meta.xml
<CustomField>
    <fullName>Primary_Practice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Practice</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Providers</relationshipLabel>
    <relationshipName>Providers</relationshipName>
    <type>Lookup</type>
</CustomField>