unpackaged/main/default/objects/Account/fields/Primary_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Primary_Specialty__c</fullName>
    <description>Provider&#39;s primary specialty</description>
    <label>Primary Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Family Medicine</fullName>
            </value>
            <value>
                <fullName>Urgent Care</fullName>
            </value>
            <value>
                <fullName>Emergency Medicine</fullName>
            </value>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Neurology</fullName>
            </value>
            <value>
                <fullName>Pediatrics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>