unpackaged/main/default/objects/Account/fields/Procedure_Level__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Level__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Procedure Level</label>
    <length>80</length>
    <type>Text</type>
</CustomField>