unpackaged/main/default/objects/Account/fields/Propensity__c.field-meta.xml
<CustomField>
    <fullName>Propensity__c</fullName>
    <description>propensity score</description>
    <label>Propensity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>