unpackaged/main/default/objects/Account/fields/Provider_ID__c.field-meta.xml
<CustomField>
    <fullName>Provider_ID__c</fullName>
    <description>Provider&#39;s SER ID from EPIC</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Provider&#39;s SER ID from EPIC</inlineHelpText>
    <label>Provider ID</label>
    <length>55</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>