unpackaged/main/default/objects/Account/fields/Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>Provider_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Provider Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>