unpackaged/main/default/objects/Account/fields/Religion__c.field-meta.xml
<CustomField>
    <fullName>Religion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Religion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>