unpackaged/main/default/objects/Account/fields/Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Risk_Score__c</fullName>
    <label>Risk Score</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>